<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="viewModel"
        type="com.demo.module.auth.viewmodel.LoginViewModel"
        />
    <variable
        name="loginActivity"
        type="com.demo.module.auth.LoginActivity"
        />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/rl_root"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/common_bg_color"
      >
    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_list_item_height"
        android:layout_marginLeft="@dimen/common_margin_left_and_right"
        android:layout_marginRight="@dimen/common_margin_left_and_right"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn_txt"
        android:onClick="@{loginActivity::onLoginClick}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        style="@style/CommonSystemButton"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_list_item_height"
        android:layout_marginTop="1dp"
        android:paddingEnd="40dp"
        android:paddingStart="@dimen/common_padding_left_and_right"
        android:background="@color/common_white"
        android:hint="@string/login_password_input_hint"
        android:singleLine="true"
        android:inputType="textPassword"
        android:text="@={viewModel.password}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name"
        />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_list_item_height"
        android:layout_marginTop="8dp"
        android:paddingEnd="40dp"
        android:paddingStart="@dimen/common_padding_left_and_right"
        android:background="@color/common_white"
        android:hint="@string/login_user_name_input_hint"
        android:singleLine="true"
        android:text="@={viewModel.userName}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <TextView
        android:id="@+id/tv_login_retrieve_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_left_and_right"
        android:layout_marginTop="12dp"
        android:text="@string/login_retrieve_password_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_margin_left_and_right"
        android:layout_marginTop="12dp"
        android:text="@string/login_register_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_ab_height"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
